--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "@types/feather-icons": "^4.7.0",
     "@types/leaflet": "^1.5.6",
+    "angular-tree-search": "^1.4.1",
     "chart.js": "^2.9.3",
     "feather-icons": "^4.24.1",
     "leaflet": "^1.6.0",
