--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/leaflet": "^1.5.6",
     "angular-tree-search": "^1.4.1",
     "chart.js": "^2.9.3",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "feather-icons": "^4.24.1",
     "leaflet": "^1.6.0",
     "ng2-charts": "^2.3.0",
