--- a/package.json
+++ b/package.json
@@ -28,8 +28,12 @@
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
     "feather-icons": "^4.24.1",
+    "jquery": "^3.4.1",
     "leaflet": "^1.6.0",
+    "moment": "^2.24.0",
     "ng2-charts": "^2.3.0",
+    "ngx-moment": "^3.5.0",
+    "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "ts-md5": "^1.2.7",
     "tslib": "^1.10.0",
