--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "@types/feather-icons": "^4.7.0",
     "@types/leaflet": "^1.5.6",
+    "angular-datatables": "^8.0.0",
     "angular-tree-search": "^1.4.1",
     "chart.js": "^2.9.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "chartjs-plugin-datalabels": "^0.7.0",
+    "datatables.net": "^1.10.20",
+    "datatables.net-dt": "^1.10.20",
     "feather-icons": "^4.24.1",
     "jquery": "^3.4.1",
     "leaflet": "^1.6.0",
@@ -45,6 +48,8 @@
     "@angular/cli": "~8.3.8",
     "@angular/compiler-cli": "~8.2.9",
     "@angular/language-service": "~8.2.9",
+    "@types/datatables.net": "^1.10.18",
+    "@types/jquery": "^3.3.31",
     "@types/node": "~8.9.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
