--- a/angular.json
+++ b/angular.json
@@ -38,6 +38,7 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
+              "node_modules/jquery-sparkline/jquery.sparkline.js",
               "node_modules/datatables.net/js/jquery.dataTables.js",
               "src/themes/dashforge/lib/bootstrap/js/bootstrap.bundle.min.js",
               "src/themes/dashforge/lib/feather-icons/feather.min.js",
