--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-datatables": "^8.0.0",
     "angular-tree-search": "^1.4.1",
     "chart.js": "^2.9.3",
+    "chartist": "^0.11.4",
     "chartjs-plugin-annotation": "^0.5.7",
     "chartjs-plugin-datalabels": "^0.7.0",
     "datatables.net": "^1.10.20",
@@ -50,6 +51,7 @@
     "@angular/cli": "~8.3.8",
     "@angular/compiler-cli": "~8.2.9",
     "@angular/language-service": "~8.2.9",
+    "@types/chartist": "^0.9.47",
     "@types/datatables.net": "^1.10.18",
     "@types/jquery": "^3.3.31",
     "@types/node": "~8.9.4",
