init site-profile-v4, site-profile-v5

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chartist": "^0.11.4",
     "chartjs-plugin-annotation": "^0.5.7",
     "chartjs-plugin-datalabels": "^0.7.0",
+    "d3": "^5.15.1",
     "datatables.net": "^1.10.20",
     "datatables.net-dt": "^1.10.20",
     "feather-icons": "^4.24.1",
@@ -52,6 +53,7 @@
     "@angular/compiler-cli": "~8.2.9",
     "@angular/language-service": "~8.2.9",
     "@types/chartist": "^0.9.47",
+    "@types/d3": "^5.7.2",
     "@types/datatables.net": "^1.10.18",
     "@types/jquery": "^3.3.31",
     "@types/node": "~8.9.4",
